# haskell-terminal

./: .gitignore  README.md  Terminal.cabal  default.nix  flake.nix  haskell-terminal.code-workspace  nohup.out  release.nix  shell.nix  terminal.cabal
.direnv/: flake-profile-1-link
app/: Main.hs
data/: colors256.sh  init.sh  japanese_stress.sh  japanese_stress_short.sh
docs/: PLAN.md
src/Hsterm/: Config.hs  Device.hs  Hsterm.hs  LoadShaders.hs  Main.hs  Renderer.hs  ShaderUtils.hs  State.hs  Theme.hs
src/Hsterm/GPipe/: Config.hs  Dyre.hs  EntryPoint.hs  Main.hs  Monad.hs  Renderer.hs  Renderer.hs.bak  Shader.hs  Terminal.hs
src/Hsterm/Renderer/: Background.hs  CursorRenderer.hs  DefaultRenderer.hs  FlatColor.hs  Utils.hs
src/Hstermplay/: Main.hs
src/System/Posix/: IOCtl.hs
src/Terminal/: Debug.hs  Parser.hs  ParserUtils.hs  Terminal.hs  Types.hs
src/Terminal/Posix/: TIOCGWINSZ.hs  TIOCSWINSZ.hs  Winsize.hs
tests/parser/: Main.hs
tests/terminal/: Main.hs
themes/default/: background.frag  blink.vert  colored.vert  simple.frag
