cabal-version:  2.4
name:           Terminal
version:        0.0.3
description:    Haskell terminal emulator
license:        GPL-3.0-only
license-file:   LICENSE
author:         Hannes Gräuler
maintainer:     hgraeule@uos.de
build-type:     Simple
extra-source-files:
  README.md
  themes/default/*.vert
  themes/default/*.frag

library
  hs-source-dirs:   src
  exposed-modules:
    Terminal.Debug
    Terminal.Parser
    Terminal.ParserUtils
    Terminal.Terminal
    Terminal.Types
    Terminal.Posix.TIOCGWINSZ
    Terminal.Posix.TIOCSWINSZ
    Terminal.Posix.Winsize
  build-depends:
    array,
    base          >= 4 && < 5,
    containers,
    diffarray,
    ioctl,
    mtl,
    parsec,
    process,
    terminfo,
    unix
  default-language: Haskell2010
  ghc-options:      -O

executable hsterm
  main-is:          Hsterm/Main.hs
  hs-source-dirs:   src
  other-modules:
    Hsterm.Config
    Hsterm.Device
    Hsterm.Hsterm
    Hsterm.LoadShaders
    Hsterm.Renderer
    Hsterm.State
    Hsterm.Theme
    Hsterm.Renderer.Background
    Hsterm.Renderer.CursorRenderer
    Hsterm.Renderer.DefaultRenderer
    Hsterm.Renderer.FlatColor
    Hsterm.Renderer.Utils
  build-depends:
    Terminal,
    array,
    base          >= 4 && < 5,
    bytestring,
    colour,
    concurrent-extra,
    containers,
    diffarray,
    FTGL,
    GLUT,
    GLURaw,
    ioctl,
    mtl,
    OpenGL,
    OpenGLRaw,
    parsec,
    process,
    random,
    stm,
    terminfo,
    text,
    time,
    unbounded-delays,
    unix
  default-language: Haskell2010
  ghc-options:      -O

executable hstermplay
  main-is:          Main.hs
  hs-source-dirs:   src/Hstermplay
  build-depends:
    Terminal,
    base          >= 4 && < 5
  default-language: Haskell2010

test-suite parser-tests
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   tests/parser
  build-depends:
    Terminal,
    base          >= 4 && < 5,
    HUnit,
    QuickCheck,
    random,
    test-framework,
    test-framework-hunit,
    test-framework-quickcheck2
  default-language: Haskell2010

test-suite terminal-tests
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   tests/terminal
  build-depends:
    Terminal,
    array,
    base          >= 4 && < 5,
    diffarray,
    HUnit,
    QuickCheck,
    test-framework,
    test-framework-hunit,
    test-framework-quickcheck2
  default-language: Haskell2010

