cabal-version:  2.4
name:           Terminal
version:        0.0.3
description:    Haskell terminal emulator
license:        GPL-3.0-only
license-file:   LICENSE
author:         Hannes Gräuler
maintainer:     hgraeule@uos.de
build-type:     Simple
extra-source-files:
  README.md
  themes/default/*.vert
  themes/default/*.frag

library
  hs-source-dirs:   src
  exposed-modules:
    System.Posix.IOCtl
    Terminal.Debug
    Terminal.Parser
    Terminal.ParserUtils
    Terminal.Terminal
    Terminal.Types
    Terminal.Posix.TIOCGWINSZ
    Terminal.Posix.TIOCSWINSZ
    Terminal.Posix.Winsize
    Hsterm.GPipe.Config
    Hsterm.GPipe.Dyre
    Hsterm.GPipe.Main
    Hsterm.GPipe.Monad
    Hsterm.GPipe.Renderer
    Hsterm.GPipe.Shader
    Hsterm.GPipe.Terminal
  build-depends:
    array,
    base            >= 4.16 && < 5,
    binary,
    bytestring,
    colour,
    containers,
    diffarray,
    directory,
    dyre            >= 0.9,
    filepath,
    GPipe           >= 2.2,
    GPipe-GLFW      >= 1.4,
    gpipe-freetype,
    linear,
    mtl,
    parsec,
    process,
    stm,
    terminfo,
    text,
    time,
    unix
  default-language: GHC2021
  ghc-options:      -O

executable hsterm-gpipe
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:
    Terminal,
    base            >= 4.16 && < 5
  default-language: GHC2021
  ghc-options:      -O

executable hstermplay
  main-is:          Main.hs
  hs-source-dirs:   src/Hstermplay
  build-depends:
    Terminal,
    base          >= 4 && < 5
  default-language: Haskell2010

test-suite parser-tests
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   tests/parser
  build-depends:
    Terminal,
    base          >= 4 && < 5,
    HUnit,
    QuickCheck,
    random,
    test-framework,
    test-framework-hunit,
    test-framework-quickcheck2
  default-language: Haskell2010

test-suite terminal-tests
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   tests/terminal
  build-depends:
    Terminal,
    array,
    base          >= 4 && < 5,
    diffarray,
    HUnit,
    QuickCheck,
    test-framework,
    test-framework-hunit,
    test-framework-quickcheck2
  default-language: Haskell2010

