Name: Terminal
Version: 0.0.3
Description: Haskell terminal emulator
License: GPL
License-file: LICENSE
Author: Hannes Gräuler
Maintainer: hgraeule@uos.de
Build-Type: Simple
Cabal-Version: >=1.2
Extra-source-files: README.md
-- Data-Files: data/fonts/*.ttf data/*.sh
data-dir:  data
Executable hsterm
  Main-is: Main.hs
  Hs-Source-Dirs: src/Hsterm, src
  Extensions: CPP
  Build-Depends: array, base >= 3 && < 5, containers, mtl, random, stm, terminfo >= 0.4.0.2
  Build-Depends: time, GLUT, OpenGLRaw, GLURaw, OpenGL, parsec, unix, process
  Build-Depends: FTGL >= 1.333, colour, diffarray
  GHC-Options: -O

